Tests/RunCMake/add_library/TARGET_SUPPORTS_SHARED_LIBS_CMP0164_OLD.cmake
@@ -1,0 +1,9 @@
+enable_language(CXX)
+cmake_policy(SET CMP0164 OLD)
+set_property(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS FALSE)
+
+add_library(someLib SHARED test.cpp)
+get_target_property(someLibType someLib TYPE)
+if(NOT someLibType STREQUAL  "STATIC_LIBRARY")
+  message(FATAL_ERROR "expected type does not match")
+endif()
